# coco-core

./: .env  .gitignore  Cargo.toml
migrations/: 20251217023639_create_watch_list_table.sql
scripts/: init_db.sh
src/: config.rs  errors.rs  lib.rs  main.rs  startup.rs
src/routes/: check.rs  expiry.rs  health_check.rs  mod.rs  portfolio.rs  register.rs  watch.rs
src/services/: ens.rs
src/types/: alloy_providers.rs  api.rs  ens.rs  mod.rs
tests/: health_check.rs
